--- a/containers/devel/docker-compose.yml
+++ b/containers/devel/docker-compose.yml
@@ -7,13 +7,13 @@ services:
       - 5000:5000
     command: /entrypoint.sh
     volumes:
-      - YOUR_DATA_PATH_HERE:/archive
-      - YOUR_CONFIG_PATH_HERE:/config
+      - ${DASH_ARCHIVE:-.:/archive}
+      - ${DASH_CONFIG:-.:/config}
       - logs:/logs
   postgres:
     env_file: database.env
     container_name: devel_postgres
-    image: postgres:12.8
+    image: postgres:13
     volumes:
       - ./database:/var/lib/postgresql
     ports:
