--- a/containers/devel/docker-compose.yml
+++ b/containers/devel/docker-compose.yml
@@ -4,19 +4,30 @@ services:
     container_name: devel_dashboard
     build:
       context: ../../
-      dockerfile: containers/devel/Dockerfile
-    env_file: dashboard.env
+      dockerfile: containers/Dockerfile
+      target: devel
+    env_file: ../dashboard.env
+    environment:
+      - FLASK_SECRET_KEY=temporarysecretkeyfordevelopment
+      - POSTGRES_PASS=devdatabasepassword
+      - POSTGRES_SRVR=devel_postgres
+      - FLASK_ENV=development
+      - LOGIN_DISABLED=True
+      - OAUTH_SECRET_GITHUB
+      - OAUTH_CLIENT_GITHUB
     ports:
       - 5000:5000
     command: /entrypoint.sh
     volumes:
       - ../../:/dashboard
-      - ${DASH_ARCHIVE:-.:/archive}
-      - ${DASH_CONFIG:-.:/config}
+      - ${DASH_ARCHIVE:-.}:/archive
+      - ${DASH_CONFIG:-.}:/config
       - logs:/logs
   postgres:
-    env_file: database.env
     container_name: devel_postgres
+    env_file: ../database.env
+    environment:
+      - POSTGRES_PASSWORD=devdatabasepassword
     image: postgres:13
     volumes:
       - ./database:/var/lib/postgresql
