--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -15,9 +15,8 @@ jobs:
       - uses: actions/checkout@v2
       - name: Start up the dashboard
         run: cd containers/devel && docker-compose up -d
-      - name: Drop into dashboard container
-        run: docker exec -it devel_dashboard /bin/bash
       - name: Run tests
-        run: pytest dashboard/tests
+        run: |
+          docker exec -it devel_dashboard /bin/bash pytest dashboard/tests
       - name: Stop containers
         run: docker-compose -f down
