--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -19,4 +19,4 @@ jobs:
         run: |
           docker exec -t devel_dashboard pytest -v dashboard/tests
       - name: Stop containers
-        run: docker-compose -f down
+        run: docker-compose down
