--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -1,4 +1,4 @@
-name: Run unit tests
+name: Build, test and update docs
 
 on:
   push:
@@ -40,4 +40,27 @@ jobs:
           docker exec -t devel_dashboard pytest -v dashboard/tests
       - name: Stop containers
         if: always()
-        run: docker-compose down
+        run: cd containers/devel && docker-compose down
+
+  make-docs:
+    needs: build
+    runs-on: ubuntu-20.04
+    timeout-minutes: 10
+    steps:
+      - uses: actions/checkout@v2
+      - uses: satackey/action-docker-layer-caching@v0.0.11
+        continue-on-error: true
+        with:
+          restore-keys: dashboard-docker-cache-
+      - name: Start up the dashboard
+        run: cd containers/devel && docker-compose start app
+      - name: Build docs
+        run: cd docs && make html
+      - name: Deploy docs
+        uses: JamesIves/github-pages-deploy-action@v4.2.2
+        with:
+          branch: gh-pages
+          folder: docs/html
+      - name: Stop containers
+        if: always()
+        run: cd containers/devel && docker-compose down
