--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -56,9 +56,9 @@ jobs:
         run: |
             cd containers/devel &&
             docker-compose build app &&
-            docker-compose up
+            docker-compose start app -d
       - name: Build docs
-        run: cd docs && make html
+        run: docker exec -t devel_dashboard "cd docs && make html"
       - name: Deploy docs
         uses: JamesIves/github-pages-deploy-action@v4.2.2
         with:
