--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -55,7 +55,7 @@ jobs:
       - name: Start up the dashboard
         run: cd containers/devel && docker-compose up -d
       - name: Build docs
-        run: docker exec -t devel_dashboard "cd docs && make html"
+        run: docker exec -t devel_dashboard /bin/bash -c "cd dashboard/docs && make html"
       - name: Deploy docs
         uses: JamesIves/github-pages-deploy-action@v4.2.2
         with:
