--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -55,7 +55,7 @@ jobs:
       # - name: Check import works
       #   run: docker exec -t devel_dashboard /bin/bash -c "python -c 'import dashboard; print(dir(dashboard))'"
       - name: Build docs
-        run: docker exec -t devel_dashboard /bin/bash -c "cd dashboard/docs && make -vvvv -a -T html"
+        run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build -vvvv -a -T dashboard/docs dashboard/docs/_build"
       - name: Confirm docs build
         run: docker exec -t devel_dashboard /bin/bash -c "ls -l && ls -l _build/"
       # - name: Deploy docs
