Update the docs deployment step and comment out debugging steps

--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -56,17 +56,17 @@ jobs:
       #   run: docker exec -t devel_dashboard /bin/bash -c "python -c 'import dashboard; print(dir(dashboard))'"
       - name: Build docs
         run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
-      - name: Repeat build to see if circular imports show again
-        run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
-      - name: And a third time
-        run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
-      - name: Confirm docs build
-        run: docker exec -t devel_dashboard /bin/bash -c "ls -l /dashboard/docs/_build/"
-      # - name: Deploy docs
-      #   uses: JamesIves/github-pages-deploy-action@v4.2.2
-      #   with:
-      #     branch: gh-pages
-      #     folder: docs/html
+      # - name: Repeat build to see if circular imports show again
+      #   run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
+      # - name: And a third time
+      #   run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
+      # - name: Confirm docs build
+      #   run: docker exec -t devel_dashboard /bin/bash -c "ls -l /dashboard/docs/_build/"
+      - name: Deploy docs
+        uses: JamesIves/github-pages-deploy-action@v4.2.2
+        with:
+          branch: gh-pages
+          folder: docs/_build
       - name: Stop containers
         if: always()
         run: cd containers/devel && docker-compose down
