--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -56,12 +56,13 @@ jobs:
       #   run: docker exec -t devel_dashboard /bin/bash -c "python -c 'import dashboard; print(dir(dashboard))'"
       - name: Build docs
         run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
-      # - name: Repeat build to see if circular imports show again
-      #   run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
+      - name: Repeat build in case non-deterministic build issue arose in last step
+        run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
       # - name: And a third time
       #   run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
       # - name: Confirm docs build
       #   run: docker exec -t devel_dashboard /bin/bash -c "ls -l /dashboard/docs/_build/"
+
       - name: Add .nojekyll file to build folder
         run: touch /dashboard/docs/_build/.nojekyll
       - name: Deploy docs
