--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -50,26 +50,21 @@ jobs:
       - uses: actions/checkout@v2
       - name: Start up the dashboard
         run: cd containers/devel && docker-compose up -d
-      # - name: Check paths
-      #   run: docker exec -t devel_dashboard /bin/bash -c "pwd && ls -l"
-      # - name: Check import works
-      #   run: docker exec -t devel_dashboard /bin/bash -c "python -c 'import dashboard; print(dir(dashboard))'"
       - name: Build docs
         run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
       - name: Repeat build in case non-deterministic build issue arose in last step
         run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
-      # - name: And a third time
-      #   run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
-      # - name: Confirm docs build
-      #   run: docker exec -t devel_dashboard /bin/bash -c "ls -l /dashboard/docs/_build/"
-
-      - name: Add .nojekyll file to build folder
-        run: touch /dashboard/docs/_build/.nojekyll
-      - name: Deploy docs
-        uses: JamesIves/github-pages-deploy-action@v4.2.2
-        with:
-          branch: gh-pages
-          folder: docs/_build
+      - name: Check the build folder contents in container
+        run: docker exec -t devel_dashboard /bin/bash -c "ls -l dashboard/docs/"
+      - name: Check the build folder in outside of the compose container
+        run: ls -l /dashboard/docs/
+      # - name: Add .nojekyll file to build folder
+      #   run: touch /dashboard/docs/_build/.nojekyll
+      # - name: Deploy docs
+      #   uses: JamesIves/github-pages-deploy-action@v4.2.2
+      #   with:
+      #     branch: gh-pages
+      #     folder: docs/_build
       - name: Stop containers
         if: always()
         run: cd containers/devel && docker-compose down
