--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -56,15 +56,13 @@ jobs:
         run: docker exec -t devel_dashboard /bin/bash -c "sphinx-build dashboard/docs dashboard/docs/_build"
       - name: Check the build folder contents in container
         run: docker exec -t devel_dashboard /bin/bash -c "ls -l dashboard/docs/"
-      - name: Check the build folder in outside of the compose container
-        run: pwd && ls -l
-      # - name: Add .nojekyll file to build folder
-      #   run: touch /dashboard/docs/_build/.nojekyll
-      # - name: Deploy docs
-      #   uses: JamesIves/github-pages-deploy-action@v4.2.2
-      #   with:
-      #     branch: gh-pages
-      #     folder: docs/_build
+      - name: Add .nojekyll file to build folder
+        run: touch docs/_build/.nojekyll
+      - name: Deploy docs
+        uses: JamesIves/github-pages-deploy-action@v4.2.2
+        with:
+          branch: gh-pages
+          folder: docs/_build
       - name: Stop containers
         if: always()
         run: cd containers/devel && docker-compose down
